Fix $presence-offline not visible with light theme if room tile selected

--- a/res/themes/legacy-light/css/_legacy-light.scss
+++ b/res/themes/legacy-light/css/_legacy-light.scss
@@ -138,7 +138,7 @@ $roomtile-default-badge-bg-color: $accent;
 $roomtile-selected-bg-color: #fff;
 
 $presence-away: #d9b072;
-$presence-offline: #e0e0e0;
+$presence-offline: #bdbdbd;
 $presence-busy: #FF5B55;
 
 // Legacy theme backports
