--- a/res/themes/light/css/_light.scss
+++ b/res/themes/light/css/_light.scss
@@ -144,7 +144,7 @@ $rte-code-bg-color: rgba(0, 0, 0, 0.04);
 // Presence
 // ********************
 $presence-away: #d9b072;
-$presence-offline: $quinary-content;
+$presence-offline: #bdbdbd;
 $presence-busy: $alert;
 // ********************
 
